# ubiblk

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  UBLK_BACKEND.md  build.rs  heaptrack.vhost-backend.883128.zst
.cargo/: audit.toml
.github/workflows/: blkbench.yaml  ci.yaml  code-quality.yaml  coverage.yaml  e2e.yaml  prebuild-ci-deps.yaml  prebuild-deps.yml  release.yaml  remote-stripe-integration.yaml  s3-integration.yaml  tla-model-check.yaml
LICENSES/: cloud-hypervisor.NOTICE.md  isa-l_crypto.NOTICE.md  vm-virtio.NOTICE.md
crates/ubiblk-macros/: Cargo.toml
crates/ubiblk-macros/src/: lib.rs
docs/: archive.md  config.md  deps-prebuilt.md  rekey.md  remote-bdev-tls.md  remote-stripe.md  remote_block_device_protocol.md  rpc.md  snapshot.md  ubitop.md  vhost-frontend.md
scripts/: check-tla-drift.py  run-tla-checks.sh  run-trace-validation.sh  s3-integration-tests.sh  trace2tla.py  ubiblk-init  ubitop  validate-trace.sh
src/: cli.rs  error.rs  export_archive.rs  lib.rs  tla_trace.rs
src/archive/: archiver.rs  bytes32.rs  compression.rs  fs_store.rs  hmac.rs  mem_store.rs  mod.rs  s3_store.rs  stripe_hashes.rs
src/archive/s3_store/: s3_store_workers.rs
src/backends/: mod.rs
src/backends/common/: io_tracking.rs  mod.rs  rpc.rs  snapshot_integration_tests.rs  snapshot_swap.rs  snapshot_types.rs
src/backends/ublk/: io_handler.rs  mod.rs
src/backends/vhost/: backend.rs  backend_loop.rs  backend_thread.rs  mod.rs  request.rs
src/backends/vhost/backend_thread/: backend_thread_tests.rs
src/block_device/: bdev_aio.rs  bdev_crypt.rs  bdev_failing.rs  bdev_lazy.rs  bdev_null.rs  bdev_remote.rs  bdev_sync.rs  bdev_test.rs  bdev_uring.rs  mod.rs  stripe_fetcher.rs  stripe_metadata_manager.rs  wait_for_completion.rs
src/block_device/bdev_lazy/: bdev_lazy.rs  bdev_lazy_tests.rs  bgworker.rs  device.rs  lazy_block_device_tests.rs  metadata.rs  metadata_flush.rs  metadata_flusher.rs  metadata_init.rs  metadata_load.rs  metadata_tests.rs  mod.rs  ops_coordinator.rs  status_report.rs  stripe_fetcher.rs  stripe_metadata_manager.rs
src/block_device/bdev_lazy/metadata/: init.rs  load.rs  mod.rs  save.rs  shared_state.rs  types.rs
src/block_device/bdev_ops/: device.rs  dual_key.rs  mod.rs  operation.rs  rekey.rs  shared_state.rs  snapshot.rs  uploader.rs
src/block_device/bdev_snapshot/: device.rs  handle.rs  mod.rs  shared_state.rs
src/config/: device.rs  mod.rs
src/config/stripe_source/: archive.rs  mod.rs  raw.rs  remote.rs
src/config/v2/: includes.rs  load.rs  mod.rs  secrets.rs  stripe_source.rs  tuning.rs
src/crypt/: block.rs  key.rs  key_serialization.rs  mod.rs
src/key_encryption/: mod.rs
src/rekey/: mod.rs  progress.rs
src/stripe_server/: client.rs  legacy.rs  mod.rs  prepare.rs  psk.rs  reconnect.rs  session.rs
src/stripe_source/: archive.rs  bdev.rs  builder.rs  flaky.rs  mod.rs  remote.rs  wait.rs
src/utils/: aligned_buffer.rs  aligned_buffer_pool.rs  block.rs  debug.rs  hash.rs  kek.rs  memory.rs  mod.rs  s3.rs  security.rs  tls.rs  umask_guard.rs
src/vhost_backend/: backend.rs  backend_loop.rs  backend_tests.rs  backend_thread.rs  backend_thread_tests.rs  io_tracking.rs  mod.rs  options.rs  request.rs  rpc.rs
src/vhost_backend/backend/: backend_tests.rs
src/vhost_backend/backend_thread/: backend_thread_tests.rs
tests/: s3_integration.rs
tests/blkio/: client.c  create_base_image.c  run-tests.sh
tests/common/: harness.py
tests/remote-stripe-integration/: README.md  cases.py  run_all.py
tests/s3-integration/: README.md  cases.py  cases.sh  run-all.sh  run_all.py  util.py
tla/: GuestFlushDurability.cfg  GuestFlushDurability.tla  GuestFlushDurability_Large.cfg  GuestFlushDurability_P5only.cfg  LivenessMixed.tla  LivenessMixedFixed.cfg  LivenessMixedFixed.tla  LivenessMixedFixed_Large.cfg  LivenessSpec.cfg  LivenessSpec.tla  LivenessSpec_Large.cfg  LivenessSpec_P7P8.cfg  LivenessSpec_P7P8_Large.cfg  MetadataDurability.cfg  MetadataDurability.tla  MetadataDurability_Large.cfg  MetadataDurability_large.cfg  MetadataLiveness.tla  MetadataLiveness_AllTerminate.cfg  MetadataLiveness_P7.cfg  MetadataLiveness_P7_noMetaFail.cfg  MetadataLiveness_P7_success.cfg  MetadataLiveness_P8.cfg  MetadataLiveness_P8_fetchOnly.cfg  MetadataLiveness_full.cfg  MetadataLiveness_safety.cfg  StripeStateTransitions.cfg  StripeStateTransitions.tla  StripeStateTransitions_Concurrent.cfg  StripeStateTransitions_Large.cfg  code-mapping.toml
