[package]
name = "ubiblk"
version = "0.3.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
debug = true
strip = false

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "wrap_help", "derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2"
smallvec = "1.15.1"
thiserror = "2.0.17"
nix = { version = "0.30.1", features = ["event", "fs", "sched", "process"] }
# vhost = { path = "../vhost/vhost", features = ["vhost-user-frontend"] }
# vhost-user-backend = { path = "../vhost/vhost-user-backend" }
vhost = "0.14.0"
vhost-user-backend = "0.20.0"
vmm-sys-util = "0.14.0"
vm-memory = "0.16.2"
virtio-bindings = "0.2.6"
virtio-queue = "0.16.0"
io-uring = "0.7.10"
serde_yaml = "0.9.34"
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
tempfile = "3.23.0"
serde_with = { version = "3.15.0", features = ["base64"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
static_assertions = "1.1.0"
serde_json = "1.0.145"

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
virtio-queue = { version = "0.16.0", features = ["test-utils"] }
vm-memory = { version = "0.16.2", features = ["backend-mmap", "backend-atomic"] }

[features]
default = []
