[package]
name = "ubiblk"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-only"

[profile.release]
lto = "thin"
codegen-units = 4
debug = true
split-debuginfo = "packed"
strip = "symbols"
opt-level = "s"

[profile.release.package."*"]
codegen-units = 16
debug = false
opt-level = "s"

[dependencies]
clap = { version = "4.5.49", features = ["cargo", "wrap_help", "derive"] }
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
thiserror = "2.0.17"
nix = { version = "0.30.1", features = ["event", "fs", "sched", "process"] }
# vhost = { path = "../vhost/vhost", features = ["vhost-user-frontend"] }
# vhost-user-backend = { path = "../vhost/vhost-user-backend" }
vhost = "0.14.0"
vhost-user-backend = "0.20.0"
vmm-sys-util = "0.14.0"
vm-memory = "0.16.2"
virtio-bindings = "0.2.6"
virtio-queue = "0.16.0"
# NOTE: io-uring was intentionally downgraded from 0.7.10 to 0.7.9 for compatibility with libublk 0.4.5.
io-uring = "0.7.9"
serde_yaml = "0.9.34"
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
tempfile = "3.23.0"
serde_with = { version = "3.15.0", features = ["base64"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
static_assertions = "1.1.0"
serde_json = "1.0.145"
rustyline = "13.0.0"
openssl = { version = "0.10.75", features = ["vendored"] }
sha2 = "0.10.9"
hmac = "0.12.1"
ciborium = "0.2.2"
aws-config = "1.8.12"
aws-sdk-s3 = { version = "1.120.0" }
tokio = { version = "1.48.0", features = ["rt"] }
crossbeam-channel = "0.5.15"
libublk = "0.4.5"
ctrlc = "3.5.1"
ubiblk-macros = { path = "crates/ubiblk-macros" }
zstd = "0.13.3"
crc32fast = "1.4"
toml = "1.0.1"
zeroize = "1.8.2"

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
virtio-queue = { version = "0.16.0", features = ["test-utils"] }
vm-memory = { version = "0.16.2", features = ["backend-mmap", "backend-atomic"] }
aws-smithy-mocks = "0.2.2"
aws-sdk-s3 = { version = "1.120.0", features = ["test-util"] }

[features]
default = []

[workspace]
members = [".", "crates/ubiblk-macros"]
